# slide

./: .envrc  .gitignore  AGENTS.md  LICENSE  PR_DESCRIPTION.md  PR_MCP_CONFIG.md  README.md  TESTING_THINKING_TOKENS.md  pyproject.toml  pytest.ini  smoke-test-tyler.sh  test_mcp_manual.py  test_raw_mcp_connection.py  test_release_process.sh  test_thinking_debug.py  test_thinking_simple.py  test_wandb_simple.py  test_wandb_thinking.py  test_weave_correct_usage.py  test_weave_serialization.py  tyler-chat-config-anthropic.yaml  tyler-chat-config-deepseek-direct.yaml  tyler-chat-config-wandb.yaml  tyler-chat-config.yaml
.cursor/commands/: release.md
.github/: PULL_REQUEST_TEMPLATE.md  WORKFLOWS.md
.github/workflows/: release-lye.yml  release-narrator.yml  release-space-monkey.yml  release-tyler.yml  release.yml  test-examples.yml  test.yml
directive/reference/: agent_context.md
docs/: agent-execution-observability-prd.md  docs.json  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/api-reference/: introduction.mdx  lye-collections.mdx  lye-tool-format.mdx  narrator-attachment.mdx  narrator-filestore.mdx  narrator-message.mdx  narrator-thread.mdx  narrator-threadstore.mdx  space-monkey-slackapp.mdx  tyler-agent.mdx  tyler-agentresult.mdx  tyler-eventtype.mdx  tyler-executiondetails.mdx  tyler-executionevent.mdx  tyler-retryconfig.mdx  (+3 more)
examples/: 007_thinking_tokens_streaming.py  DEVELOPMENT.md  README.md  agent_observability_demo.py  execution_observability_demo.py  streaming_chunks_demo.py  test_agent_observability_basic.py  test_execution_observability.py  test_streaming_chunks.py
mintlify-docs/: mint.json
scripts/: README.md  bump_version.py  release-all.sh  release.sh  test_release.sh  tyler_smoke_test.py  update_dependent_constraints.py
tests/: requirements.txt  run_examples.py  test_examples.py
(+134 files in other folders)
