[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slide"
version = "0.1.0"
description = "Slide: A comprehensive toolkit for building AI agents with Tyler and The Narrator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "adamwdraper"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "slide-tyler>=1.1.0",
    "slide-narrator>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "coverage>=7.6.10",
    "pip-tools>=7.4.1",
]

[project.urls]
Homepage = "https://github.com/adamwdraper/slide"
Documentation = "https://github.com/adamwdraper/slide#readme"
Repository = "https://github.com/adamwdraper/slide"
"Bug Tracker" = "https://github.com/adamwdraper/slide/issues"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]

# Shared configuration for all packages
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto" 